--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       <div style="font-size: 0.95rem; opacity: 0.95;">
         現在価格でのご依頼は<strong>8月31日まで</strong>
       </div>
+      <div style="font-size: 0.85rem; opacity: 0.9; margin-top: 5px;">
+        ※すでにご相談・ご依頼いただいている方は改定前の料金でご対応いたします
+      </div>
       <div style="display: flex; gap: 10px; flex-wrap: wrap;">
         <a href="#pricing-update" style="background: white; color: var(--warning); padding: 8px 16px; border-radius: 20px; text-decoration: none; font-weight: 600; font-size: 0.9rem; transition: all 0.3s ease; display: inline-flex; align-items: center; gap: 5px;"
            onmouseover="this.style.transform='scale(1.05)'"
@@ -342,7 +345,7 @@
         <p>
           <strong>歌ってみたMIX:</strong> ボカロ・J-POP中心<br>
           <strong>SNSアカウント:</strong> <a href="https://x.com/ryuzanmix" target="_blank">@ryuzanmix</a><br>
-          <strong>対応レベル:</strong> 初心者～上級者・オーディション提出音源まで<br>
+          <strong>対応レベル:</strong> 初心者〜上級者・オーディション提出音源まで<br>
           <strong>特殊対応:</strong> ライブ音源補正、デュエット・コラボ、ガイドボーカル制作<br>
           <strong>納期実績:</strong> 現在1ヶ月前後（ご相談可能）
         </p>
@@ -387,7 +390,7 @@
           <i class="fas fa-clock" style="color: #34495e;"></i>
           柔軟な納期と修正対応
         </h3>
-        <p>現在の納期1ヶ月前後ですが、ご相談いただけます。無料修正2回付き（3回目以降+¥1,000）。修正は一度にすべて詳細にご指示いただくことで、品質と納期を両立します。</p>
+        <p>現在の納期1ヶ月前後ですが、ご相談いただけます。無料修正2回付き（3回目以降+￥1,000）。修正は一度にすべて詳細にご指示いただくことで、品質と納期を両立します。</p>
       </article>
 
       <article class="card">
@@ -435,7 +438,7 @@
   </section>
 
   <!-- 料金改定について -->
-  <section id="pricing-update" style="background: var(--gradient); margin: 40px 0; padding: 40px 30px; border-radius: 20px; border: 2px solid var(--warning); box-shadow: var(--shadow);">
+  <section id="pricing-update" style="background: var(--gradient); margin: 40px auto; padding: 40px 30px; border-radius: 20px; border: 2px solid var(--warning); box-shadow: var(--shadow); max-width: 1200px;">
     <div class="section-header" style="text-align: center; margin-bottom: 30px;">
       <h2 style="color: var(--warning); margin-bottom: 15px; font-size: 1.5rem;">
         <i class="fas fa-bell"></i>
@@ -443,7 +446,11 @@
       </h2>
       <p style="color: var(--primary-dark); font-size: 1.1rem; line-height: 1.6; max-width: 800px; margin: 0 auto;">
         培った技術力と豊富な実績を踏まえ、より高品質なサービス提供のため、料金体系を改定いたします。<br>
-        <strong style="color: var(--warning);">2025年8月31日までは移行期間として特別料金でご提供中です。</strong>
+        <strong style="color: var(--warning);">2025年8月31日までは移行期間として特別料金でご提供中です。</strong><br>
+        <span style="color: var(--primary-dark); font-weight: 600; margin-top: 10px; display: block;">
+          <i class="fas fa-shield-alt"></i>
+          すでにご相談・ご依頼いただいている方は、改定前の料金でご対応させていただきます。
+        </span>
       </p>
     </div>
 
@@ -460,19 +467,22 @@
         <div style="text-align: center; margin-bottom: 20px;">
           <div style="font-size: 1.1rem; margin-bottom: 8px; color: var(--text);">
             <strong>フルコーラス MIX：</strong>
-            <span style="color: var(--success); font-weight: 700; font-size: 1.2rem;">¥5,000</span>
+            <span style="color: var(--success); font-weight: 700; font-size: 1.2rem;">￥5,000</span>
           </div>
           <div style="font-size: 1.1rem; margin-bottom: 8px; color: var(--text);">
             <strong>ワンコーラス MIX：</strong>
-            <span style="color: var(--success); font-weight: 700; font-size: 1.2rem;">¥3,000</span>
+            <span style="color: var(--success); font-weight: 700; font-size: 1.2rem;">￥3,000</span>
           </div>
           <div style="font-size: 0.9rem; color: var(--text-light); margin-top: 15px; padding-top: 15px; border-top: 1px solid var(--border);">
-            • ハモリ追加（3トラック目〜）：+¥1,000<br>
-            • 動画エンコード：+¥1,000
+            • ハモリ追加（3トラック目〜）：+￥1,000<br>
+            • 動画エンコード：+￥1,000
           </div>
         </div>
-        <div style="background: var(--success); color: white; padding: 12px; border-radius: 10px; text-align: center; font-weight: 600;">
+        <div style="background: var(--success); color: white; padding: 12px; border-radius: 10px; text-align: center; font-weight: 600; margin-bottom: 10px;">
           <i class="fas fa-star"></i> 現在価格でのご依頼は8月31日まで
+        </div>
+        <div style="background: #e8f5e8; color: var(--success); padding: 8px; border-radius: 8px; text-align: center; font-size: 0.85rem; font-weight: 500;">
+          すでにご相談・ご依頼いただいている方は改定前の料金でご対応いたします
         </div>
       </div>
 
@@ -487,15 +497,15 @@
         <div style="text-align: center; margin-bottom: 20px;">
           <div style="font-size: 1.1rem; margin-bottom: 8px; color: var(--text);">
             <strong>フルコーラス MIX：</strong>
-            <span style="color: var(--warning); font-weight: 700; font-size: 1.2rem;">¥8,000</span>
+            <span style="color: var(--warning); font-weight: 700; font-size: 1.2rem;">￥8,000</span>
           </div>
           <div style="font-size: 1.1rem; margin-bottom: 8px; color: var(--text);">
             <strong>ワンコーラス MIX：</strong>
-            <span style="color: var(--warning); font-weight: 700; font-size: 1.2rem;">¥6,000</span>
+            <span style="color: var(--warning); font-weight: 700; font-size: 1.2rem;">￥6,000</span>
           </div>
           <div style="font-size: 0.9rem; color: var(--text-light); margin-top: 15px; padding-top: 15px; border-top: 1px solid var(--border);">
-            • ハモリ追加（3トラック目〜）：<strong style="color: var(--warning);">+¥3,000</strong><br>
-            • 動画エンコード：+¥1,000
+            • ハモリ追加（3トラック目〜）：<strong style="color: var(--warning);">+￥3,000</strong><br>
+            • 動画エンコード：+￥1,000
           </div>
         </div>
         <div style="background: var(--warning); color: white; padding: 12px; border-radius: 10px; text-align: center; font-weight: 600;">
@@ -512,7 +522,11 @@
       </h3>
       <p style="margin-bottom: 20px; font-size: 1rem; opacity: 0.95;">
         現在価格でのご依頼受付は<strong>2025年8月31日</strong>までとなります。<br>
-        この機会にぜひRyuzan Mix Salonの高品質MIXをお試しください。
+        この機会にぜひRyuzan Mix Salonの高品質MIXをお試しください。<br>
+        <span style="color: #2d5aa0; font-weight: 600; margin-top: 8px; display: block;">
+          <i class="fas fa-info-circle"></i>
+          すでにご相談・ご依頼いただいている方は、改定前の料金でご対応させていただきます。
+        </span>
       </p>
       <div style="display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
         <a href="https://forms.gle/u6KXppEsxdnw6g3W8" target="_blank" 
@@ -551,6 +565,12 @@
       <div class="pricing-header">
         <h3>Ryuzan Mix Salon 料金表</h3>
         <p>全て税込価格・追加料金なしの安心価格</p>
+        <div style="background: #fff3cd; border: 2px solid var(--warning); border-radius: 12px; padding: 15px; margin-top: 15px; text-align: center;">
+          <p style="margin: 0; color: var(--warning); font-weight: 600; font-size: 0.95rem;">
+            <i class="fas fa-info-circle"></i>
+            <strong>すでにご相談・ご依頼いただいている方は、改定前の料金でご対応させていただきます。</strong>
+          </p>
+        </div>
       </div>
 
       <div class="pricing-content">
@@ -561,14 +581,14 @@
             <div class="price-item featured">
               <div class="price-name">⭐ フルコーラス MIX</div>
               <div class="price-description">ノイズ処理＋ピッチ&リズム補正＋マスタリング＋ハモリ2トラック込み</div>
-              <div class="price-amount">¥5,000</div>
+              <div class="price-amount">￥5,000</div>
               <div class="price-note">初心者の方におすすめ◎</div>
             </div>
 
             <div class="price-item">
               <div class="price-name">ワンコーラス MIX</div>
               <div class="price-description">1番のみをMIX（ハモリ2トラック込み・お試し用）</div>
-              <div class="price-amount">¥3,000</div>
+              <div class="price-amount">￥3,000</div>
               <div class="price-note">まずは気軽にクオリティ確認</div>
             </div>
 
@@ -588,28 +608,28 @@
             <div class="price-item">
               <div class="price-name">ハモリ追加（3トラック目から）</div>
               <div class="price-description">3トラック目からの追加ハモリ（1トラックごと）</div>
-              <div class="price-amount">+¥1,000</div>
+              <div class="price-amount">+￥1,000</div>
               <div class="price-note">2トラックまでは基本料金に含む</div>
             </div>
 
             <div class="price-item">
               <div class="price-name">🎬 動画エンコード</div>
               <div class="price-description">YouTube・X向けに高画質エンコード（音圧調整込み）</div>
-              <div class="price-amount">+¥1,000</div>
+              <div class="price-amount">+￥1,000</div>
               <div class="price-note">尺・形式はご相談可</div>
             </div>
 
             <div class="price-item">
               <div class="price-name">💥 コラボ追加（1名）</div>
               <div class="price-description">デュエット・ユニゾンなど追加ボーカル1名まで対応</div>
-              <div class="price-amount">+¥2,000</div>
+              <div class="price-amount">+￥2,000</div>
               <div class="price-note">2名以上は別途お見積もり</div>
             </div>
 
             <div class="price-item">
               <div class="price-name">🎛️ FX処理（1ヶ所）</div>
               <div class="price-description">ボコーダー、ディストーション、特殊エフェクト等の処理</div>
-              <div class="price-amount">+¥2,000</div>
+              <div class="price-amount">+￥2,000</div>
               <div class="price-note">1ヶ所につき、複数箇所対応可</div>
             </div>
 
@@ -636,14 +656,14 @@
             <div class="price-item">
               <div class="price-name">📈 ピッチ補正なし</div>
               <div class="price-description">ピッチ補正を行わない自然仕上げ</div>
-              <div class="price-amount">-¥1,000</div>
+              <div class="price-amount">-￥1,000</div>
               <div class="price-note">"手直し不要"なテイク限定</div>
             </div>
 
             <div class="price-item">
               <div class="price-name">🎁 リピーター割</div>
               <div class="price-description">2回目以降のご依頼時に適用</div>
-              <div class="price-amount">-¥500</div>
+              <div class="price-amount">-￥500</div>
               <div class="price-note">感謝のリピート特典✨</div>
             </div>
           </div>
@@ -657,7 +677,7 @@
               <div class="price-name">📄 修正回数</div>
               <div class="price-description">
                 <strong>無料修正：2回まで</strong><br>
-                3回目以降：1回につき+¥1,000<br>
+                3回目以降：1回につき+￥1,000<br>
                 <span style="color: var(--warning); font-weight: 600;">※修正依頼は一度にすべて詳細にご指示ください</span><br>
                 <small>複数回に分けると全体バランスが崩れ、納期延長の原因となります</small>
               </div>
@@ -711,7 +731,16 @@
         現在こちらのページ価格に各サイトの手数料を含ませた料金になります。X（DM）やご依頼＆ご相談フォームからのご依頼では、上記の通常価格でご案内しています。<br><br>
         <strong>🎁 お支払い方法について</strong><br>
         <strong style="color: var(--success);">銀行振込を最も推奨</strong>しており（手数料はご負担ください）、次にPayPay決済の順となります。<br>
-        その他の決済方法をご希望の場合は、お気軽にご相談ください。
+        その他の決済方法をご希望の場合は、お気軽にご相談ください。<br><br>
+        <div style="background: #e8f5e8; border: 2px solid var(--success); border-radius: 8px; padding: 15px; margin-top: 15px;">
+          <strong style="color: var(--success);">
+            <i class="fas fa-shield-alt"></i>
+            既存お客様への重要なお知らせ
+          </strong><br>
+          <span style="color: var(--success); font-size: 0.95rem;">
+            すでにご相談・ご依頼いただいている方は、改定前の料金でご対応させていただきます。
+          </span>
+        </div>
       </div>
     </div>
 
@@ -720,16 +749,16 @@
       <h3>💬 よくあるご依頼例</h3>
       <div style="display: grid; gap: 15px; margin-top: 15px;">
         <div style="padding: 15px; background: var(--bg-secondary); border-radius: 8px;">
-          <strong>初心者スタンダード:</strong> フルコーラス MIX (¥5,000) + 動画エンコード (+¥1,000) = <span style="color: var(--primary); font-weight: bold;">¥6,000</span>
+          <strong>初心者スタンダード:</strong> フルコーラス MIX (￥5,000) + 動画エンコード (+￥1,000) = <span style="color: var(--primary); font-weight: bold;">￥6,000</span>
         </div>
         <div style="padding: 15px; background: var(--bg-secondary); border-radius: 8px;">
-          <strong>お試しプラン:</strong> ワンコーラス MIX (¥3,000) + ピッチ補正なし (-¥1,000) = <span style="color: var(--primary); font-weight: bold;">¥2,000</span>
+          <strong>お試しプラン:</strong> ワンコーラス MIX (￥3,000) + ピッチ補正なし (-￥1,000) = <span style="color: var(--primary); font-weight: bold;">￥2,000</span>
         </div>
         <div style="padding: 15px; background: var(--bg-secondary); border-radius: 8px;">
-          <strong>コラボ対応:</strong> フルコーラス MIX (¥5,000) + コラボ追加 (+¥2,000) + エンコード (+¥1,000) = <span style="color: var(--primary); font-weight: bold;">¥8,000</span>
+          <strong>コラボ対応:</strong> フルコーラス MIX (￥5,000) + コラボ追加 (+￥2,000) + エンコード (+￥1,000) = <span style="color: var(--primary); font-weight: bold;">￥8,000</span>
         </div>
         <div style="padding: 15px; background: var(--bg-secondary); border-radius: 8px;">
-          <strong>ハモリ多用プラン:</strong> フルコーラス MIX (¥5,000) + ハモリ追加 3-4トラック目 (+¥2,000) = <span style="color: var(--primary); font-weight: bold;">¥7,000</span>
+          <strong>ハモリ多用プラン:</strong> フルコーラス MIX (￥5,000) + ハモリ追加 3-4トラック目 (+￥2,000) = <span style="color: var(--primary); font-weight: bold;">￥7,000</span>
         </div>
         <div style="padding: 15px; background: #fff3cd; border: 2px solid var(--warning); border-radius: 8px;">
           <strong style="color: var(--warning);">納期について:</strong> 現在すべてのプランで<span style="color: var(--warning); font-weight: bold;">1ヶ月前後</span>のお時間をいただいておりますが、ご相談いただけます
@@ -843,7 +872,7 @@
           <p>
             修正がある場合は、詳細にご指示ください。<br>
             • <strong style="color: var(--warning);">修正依頼は一度にすべて詳細にご指示ください</strong><br>
-            • 無料修正2回まで対応（3回目以降+¥1,000/回）<br>
+            • 無料修正2回まで対応（3回目以降+￥1,000/回）<br>
             • 具体的な箇所・内容をお教えください<br>
             修正なしの場合は、そのまま次のステップへ進みます。
           </p>
@@ -894,7 +923,7 @@
       </div>
     </div>
 
-    <!-- 重要ポイント -->
+    <!-- 重要なポイント -->
     <div class="card" style="background: var(--gradient); border: 2px solid var(--primary); margin-top: 40px;">
       <h3 style="color: var(--primary-dark); margin-bottom: 15px;">
         <i class="fas fa-exclamation-triangle"></i>
@@ -1011,7 +1040,7 @@
     <div class="faq-item">
       <details>
         <summary>修正は何回まで？</summary>
-        <p><strong>無料2回まで対応</strong>いたします。3回目以降は1回+¥1,000です。<br>
+        <p><strong>無料2回まで対応</strong>いたします。3回目以降は1回+￥1,000です。<br>
         <span style="color: var(--warning); font-weight: 600;">重要：修正依頼は一度にすべて詳細にご指示ください。</span><br>
         複数回に分けると全体バランスが崩れ、納期延長の原因となります。事前の詳細なヒアリングで、ご希望に沿った仕上がりを目指します。</p>
       </details>
@@ -1027,7 +1056,7 @@
     <div class="faq-item">
       <details>
         <summary>ハモリは何トラックまで？</summary>
-        <p>基本料金には2トラックまでのハモリが含まれています。3トラック目からは1トラックごとに+¥1,000で追加できます。ご希望に応じて何トラックでも対応可能です。</p>
+        <p>基本料金には2トラックまでのハモリが含まれています。3トラック目からは1トラックごとに+￥1,000で追加できます。ご希望に応じて何トラックでも対応可能です。</p>
       </details>
     </div>
 
@@ -1069,7 +1098,7 @@
       <h2 class="section-title">ご相談はこちらから☺️</h2>
       <p style="margin-bottom: 10px;">「ちょっと聞いてみたいな…」という方も、お気軽にご連絡ください🕊</p>
       <p style="font-size: 0.9rem; color: var(--text-light); margin-bottom: 20px;">
-        「録音に不安がある…」「まだ依頼じゃないけど話を聞いてみたい」なども大歓迎です🌸<br>
+        「録音に不安がある…」「まだ依頼じゃないけど話を聞いてみたい」などもナ大歓迎です🌸<br>
         無理な勧誘などは一切ありませんので、安心してどうぞ。
       </p>
       
