--- a/recording-guide.html
+++ b/recording-guide.html
@@ -682,7 +682,7 @@
           <i class="fas fa-info-circle" aria-hidden="true"></i>
           つまり、録音品質がMIXの仕上がりを決める
         </h4>
-        <p><strong>良い録音 × 良いMIX = 素晴らしい仕上がり</strong><br>
+        <p><strong>良い録音 = 品質の高い仕上がり</strong><br>
         このガイドの録音方法を実践していただければ、MIXで美しく仕上げることができます！</p>
       </div>
 
